--- a/BeanSceneReservationApp/Views/Shared/_Layout.cshtml
+++ b/BeanSceneReservationApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Areas" asp-action="Index">Area</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RestaurantTables" asp-action="Index">Restaurant Tables</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">Members</a>
                         </li>
                     </ul>
