--- a/BeanSceneReservationApp/Views/Areas/Create.cshtml
+++ b/BeanSceneReservationApp/Views/Areas/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@* @model BeanSceneReservationApp.Models.Area
+﻿@model BeanSceneReservationApp.Models.Area
 
 @{
     ViewData["Title"] = "Create";
@@ -20,57 +20,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Capacity" class="control-label"></label>
-                <input asp-for="Capacity" class="form-control" />
+                <input asp-for="Capacity" class="form-control" type="number" />
                 <span asp-validation-for="Capacity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
- *@
-
-@model BeanSceneReservationApp.Models.RestaurantTable
-
-@{
-    ViewData["Title"] = "Create Restaurant Table";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h1>Create Restaurant Table</h1>
-
-<h4>Restaurant Table</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TableName" class="control-label"></label>
-                <input asp-for="TableName" class="form-control" />
-                <span asp-validation-for="TableName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AreaId" class="control-label"></label>
-                <select asp-for="AreaId" class="form-control" asp-items="ViewBag.AreaId"></select>
-                <span asp-validation-for="AreaId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TableStatus" class="control-label"></label>
-                <input asp-for="TableStatus" class="form-control" />
-                <span asp-validation-for="TableStatus" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
