--- a/BeanSceneReservationApp/Views/RestaurantTables/Create.cshtml
+++ b/BeanSceneReservationApp/Views/RestaurantTables/Create.cshtml
@@ -28,6 +28,11 @@
                 <span asp-validation-for="TableStatus" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AreaName" class="control-label"></label>
+                <input asp-for="AreaName" class="form-control" />
+                <span asp-validation-for="AreaName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
