--- a/BeanSceneReservationApp/Views/RestaurantTables/Details.cshtml
+++ b/BeanSceneReservationApp/Views/RestaurantTables/Details.cshtml
@@ -24,10 +24,16 @@
             @Html.DisplayFor(model => model.TableStatus)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.AreaName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.AreaName)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Area)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Area.AreaName)
+            @Html.DisplayFor(model => model.Area.AreaId)
         </dd>
     </dl>
 </div>
