--- a/BeanSceneReservationApp/Views/RestaurantTables/Edit.cshtml
+++ b/BeanSceneReservationApp/Views/RestaurantTables/Edit.cshtml
@@ -26,11 +26,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="TableStatus" class="control-label"></label>
-                <select asp-for="TableStatus" class="form-control">
-                    <option value="Available">Available</option>
-                    <option value="Booked">Booked</option>
-                </select>
+                <input asp-for="TableStatus" class="form-control" />
                 <span asp-validation-for="TableStatus" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="AreaName" class="control-label"></label>
+                <input asp-for="AreaName" class="form-control" />
+                <span asp-validation-for="AreaName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
