--- a/BeanSceneReservationApp/Views/RestaurantTables/Index.cshtml
+++ b/BeanSceneReservationApp/Views/RestaurantTables/Index.cshtml
@@ -20,30 +20,35 @@
                 @Html.DisplayNameFor(model => model.TableStatus)
             </th>
             <th>
-                Area
+                @Html.DisplayNameFor(model => model.AreaName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Area)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TableName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TableStatus)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Area.AreaName)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.TableId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.TableId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.TableId">Delete</a>
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TableName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TableStatus)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AreaName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Area.AreaId)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.TableId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.TableId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.TableId">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
