--- a/BeanSceneReservationApp/Views/Reservations/Details.cshtml
+++ b/BeanSceneReservationApp/Views/Reservations/Details.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.SittingId)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.SittingId)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.GuestName)
         </dt>
         <dd class = "col-sm-10">
@@ -36,12 +42,6 @@
             @Html.DisplayFor(model => model.StartTime)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Duration)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Duration)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NumOfGuests)
         </dt>
         <dd class = "col-sm-10">
@@ -60,28 +60,34 @@
             @Html.DisplayFor(model => model.Notes)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.OrderSource)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.OrderSource)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ReservationStatus)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ReservationStatus)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.SittingTime)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.SittingTime)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.AreaName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.AreaName)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Table)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Table.TableId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Member)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Member.MemberId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sitting)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sitting.SittingId)
+            @Html.DisplayFor(model => model.Table.TableName)
         </dd>
     </dl>
 </div>
