--- a/BeanSceneReservationApp/Views/RestaurantTables/Create.cshtml
+++ b/BeanSceneReservationApp/Views/RestaurantTables/Create.cshtml
@@ -20,12 +20,27 @@
             </div>
             <div class="form-group">
                 <label asp-for="AreaId" class="control-label"></label>
-                <select asp-for="AreaId" class ="form-control" asp-items="ViewBag.AreaId"></select>
+                <select asp-for="AreaId" class="form-control" asp-items="ViewBag.AreaId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="TableStatus" class="control-label"></label>
-                <input asp-for="TableStatus" class="form-control" />
+                <select asp-for="TableStatus" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.TableStatus)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="TableStatus" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="AreaName" class="control-label"></label>
+                <select asp-for="AreaName" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.AreaName)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
+                <span asp-validation-for="AreaName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -39,5 +54,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
