--- a/BeanSceneReservationApp/Views/Home/Index.cshtml
+++ b/BeanSceneReservationApp/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Bean Scense Resturant </h1>
-    <p></p>
+    <p>Here at bean scene we value our customers feel free to sign up and become a member to recive reward points to go towards your next order</p>
+    <p>Unfortuently we are not offring take away orders at the moment sorry for any inconvienece</p>
+    <p>Please navigate to the Book Reservation tab to book your reservation</p>
 </div>
