--- a/BeanSceneReservationApp/Views/Areas/Create.cshtml
+++ b/BeanSceneReservationApp/Views/Areas/Create.cshtml
@@ -15,7 +15,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="AreaName" class="control-label"></label>
-                <input asp-for="AreaName" class="form-control" />
+                <select asp-for="AreaName" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.AreaName)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="AreaName" class="text-danger"></span>
             </div>
             <div class="form-group">
