--- a/BeanSceneReservationApp/Views/Reservations/Create.cshtml
+++ b/BeanSceneReservationApp/Views/Reservations/Create.cshtml
@@ -5,19 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Book your reservation</h1>
 
-<h4>Reservation</h4>
+<h4>Welcome please enter enter in your details to book your reservation</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="SittingId" class="control-label"></label>
-                <input asp-for="SittingId" class="form-control" />
-                <span asp-validation-for="SittingId" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="GuestName" class="control-label"></label>
                 <input asp-for="GuestName" class="form-control" />
@@ -42,11 +37,6 @@
                 <label asp-for="NumOfGuests" class="control-label"></label>
                 <input asp-for="NumOfGuests" class="form-control" />
                 <span asp-validation-for="NumOfGuests" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ReservationSource" class="control-label"></label>
-                <input asp-for="ReservationSource" class="form-control" />
-                <span asp-validation-for="ReservationSource" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
@@ -96,6 +86,7 @@
             <div class="form-group">
                 <label asp-for="TableId" class="control-label"></label>
                 <select asp-for="TableId" class="form-control" asp-items="ViewBag.TableId"></select>
+                <span asp-validation-for="TableId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
