--- a/BeanSceneReservationApp/Views/Reservations/Edit.cshtml
+++ b/BeanSceneReservationApp/Views/Reservations/Edit.cshtml
@@ -15,11 +15,6 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ReservationId" />
             <div class="form-group">
-                <label asp-for="SittingId" class="control-label"></label>
-                <input asp-for="SittingId" class="form-control" />
-                <span asp-validation-for="SittingId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="GuestName" class="control-label"></label>
                 <input asp-for="GuestName" class="form-control" />
                 <span asp-validation-for="GuestName" class="text-danger"></span>
@@ -45,33 +40,48 @@
                 <span asp-validation-for="NumOfGuests" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ReservationSource" class="control-label"></label>
-                <input asp-for="ReservationSource" class="form-control" />
-                <span asp-validation-for="ReservationSource" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
                 <input asp-for="Notes" class="form-control" />
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="OrderSource" class="control-label"></label>
-                <select asp-for="OrderSource" class="form-control"></select>
+                <select asp-for="OrderSource" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.OrderSource)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="OrderSource" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ReservationStatus" class="control-label"></label>
-                <select asp-for="ReservationStatus" class="form-control"></select>
+                <select asp-for="ReservationStatus" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.ReservationStatus)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="ReservationStatus" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SittingTime" class="control-label"></label>
-                <select asp-for="SittingTime" class="form-control"></select>
+                <select asp-for="SittingTime" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.SittingTime)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="SittingTime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AreaName" class="control-label"></label>
-                <select asp-for="AreaName" class="form-control"></select>
+                <select asp-for="AreaName" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.AreaName)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="AreaName" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -91,5 +101,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
