--- a/BeanSceneReservationApp/Views/Reservations/Index.cshtml
+++ b/BeanSceneReservationApp/Views/Reservations/Index.cshtml
@@ -14,9 +14,6 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.SittingId)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.GuestName)
             </th>
             <th>
@@ -30,9 +27,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.NumOfGuests)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReservationSource)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Notes)
@@ -59,9 +53,6 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.SittingId)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.GuestName)
             </td>
             <td>
@@ -75,9 +66,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NumOfGuests)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReservationSource)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Notes)
@@ -97,11 +85,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Table.TableName)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ReservationId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ReservationId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ReservationId">Delete</a>
-            </td>
+            @if (User.IsInRole("Manager") || User.IsInRole("Staff"))
+            {
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ReservationId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ReservationId">Report</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ReservationId">Delete</a>
+                </td>
+                    
+            }
         </tr>
 }
     </tbody>
