--- a/BeanSceneReservationApp/Views/RestaurantTables/Edit.cshtml
+++ b/BeanSceneReservationApp/Views/RestaurantTables/Edit.cshtml
@@ -26,12 +26,22 @@
             </div>
             <div class="form-group">
                 <label asp-for="TableStatus" class="control-label"></label>
-                <select asp-for="TableStatus" class="form-control"></select>
+                <select asp-for="TableStatus" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.TableStatus)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="TableStatus" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AreaName" class="control-label"></label>
-                <select asp-for="AreaName" class="form-control"></select>
+                <select asp-for="AreaName" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.AreaName)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="AreaName" class="text-danger"></span>
             </div>
             <div class="form-group">
