--- a/BeanSceneReservationApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BeanSceneReservationApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -46,7 +46,10 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
+            </div><br />
+            <br />
+            <br />
+            <br />
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
