validation for user subkey not valid

--- a/BeanSceneReservationApp/Views/Home/Index.cshtml
+++ b/BeanSceneReservationApp/Views/Home/Index.cshtml
@@ -3,8 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Bean Scense Resturant </h1>
-    <p>Here at bean scene we value our customers feel free to sign up and become a member to recive reward points to go towards your next order</p>
-    <p>Unfortuently we are not offring take away orders at the moment sorry for any inconvienece</p>
-    <p>Please navigate to the Book Reservation tab to book your reservation</p>
+    <img src="~/Images/Logo.jpg" alt="Bean Scene Restaurant Logo" width="300" height="200">
+    <h1 class="display-4">Welcome to Bean Scene Restaurant</h1>
+    <p>Here at Bean Scene, we value our customers. Feel free to sign up and become a member to receive reward points to go towards your next order.</p>
+    <p>Unfortunately, we are not offering take-away orders at the moment. Sorry for any inconvenience.</p>
+    <p>Please navigate to the Book Reservation tab to book your reservation.</p>
 </div>
