--- a/BeanSceneReservationApp/Views/Reservations/Create.cshtml
+++ b/BeanSceneReservationApp/Views/Reservations/Create.cshtml
@@ -14,6 +14,12 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @if (!string.IsNullOrEmpty(ViewBag.SuccessMessage))
+            {
+                <div class="alert alert-success" role="alert">
+                    @ViewBag.SuccessMessage
+                </div>
+            }
             <div class="form-group">
                 <label asp-for="GuestName" class="control-label"></label>
                 <input asp-for="GuestName" class="form-control" />
@@ -56,16 +62,6 @@
                 </select>
                 <span asp-validation-for="OrderSource" class="text-danger"></span>
             </div>
-            @* <div class="form-group">
-                <label asp-for="ReservationStatus" class="control-label"></label>
-                <select asp-for="ReservationStatus" class="form-control">
-                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.ReservationStatus)))
-                    {
-                        <option value="@item">@item</option>
-                    }
-                </select>
-                <span asp-validation-for="ReservationStatus" class="text-danger"></span>
-            </div> *@
             <div class="form-group">
                 <label asp-for="SittingTime" class="control-label"></label>
                 <select asp-for="SittingTime" class="form-control">
@@ -97,6 +93,7 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+
         </form>
     </div>
 </div>
