--- a/BeanSceneReservationApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BeanSceneReservationApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -33,12 +33,12 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Phone" class="form-control" autocomplete="tel" aria-required="true" placeholder="Phone Number" />
-                <label asp-for="Input.Phone">Phone</label>
-                <span asp-validation-for="Input.Phone" class="text-danger"></span>
+                <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="tel" aria-required="true" placeholder="Phone Number" />
+                <label asp-for="Input.PhoneNumber">Phone</label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <input asp-for="Input.Password" type="password"  class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.Password">Password</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
